# mathmodel-dev-agent

./: .env.example  .gitignore  CASE_STUDY.md  CLAUDE.md  README.md  fix_figures.py  main.py  pyproject.toml  requirements.txt  review_report.md
.claude/: settings.local.json
.claude/commands/: pydebug.md
code/: solution.py
examples/: sample_optimization.txt  sample_prediction.txt
examples/A_underwater_detection_demo/: README.md  problem.txt
examples/underwater_detection_case/: README.md
mathmodel/: __init__.py  config.py  orchestrator.py  sync.py
mathmodel/agents/: __init__.py  base.py  code_agent.py  experiment_agent.py  github_agent.py  paper_agent.py  parser_agent.py  strategy_agent.py
mathmodel/core/: __init__.py  code_executor.py  document_parser.py  llm_client.py  plotter.py  project_manager.py
mathmodel/paper/: __init__.py  ir.py  ir_builder.py  pandoc_builder.py  quality.py  renderer.py
mathmodel/utils/: __init__.py  file_ops.py  git_ops.py  omml_renderer.py  validators.py
outputs/A_underwater_detection/: experiment_report.md  generated_code.py  paper_outline.md  parsed_problem.json  results.json  solution_summary.md  strategy.md
outputs/mathmodel_20260513_225958/: CHANGES.md  PROJECT_DESCRIPTION.md  README.md  experiment_report.md  project_state.json  summary.json
outputs/test_solve_20260513_225826/: CHANGES.md  PROJECT_DESCRIPTION.md  README.md  project_state.json  (+1 more)
tests/: test_code_agent.py  test_experiment_agent.py  test_github_agent.py  test_orchestrator.py  test_paper_agent.py  test_parser_agent.py  test_strategy_agent.py
(+13 files in other folders)
