[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mathmodel-dev-agent"
version = "0.1.0"
description = "基于 Multi-Agent 的数学建模与自动开发系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MathModel Dev Agent"}
]

dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mathmodel = "main:main"

[tool.setuptools.packages.find]
include = ["mathmodel*"]
